# cpp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  a.out
.agents/: README.md
.agents/atlas/: identity.md
.agents/forge/: identity.md
.agents/iris/: identity.md
.cursor/hooks/state/: continual-learning-index.json
.cursor/memory/: MEMORY.md
.cursor/rules/: 00-deep-thinking.mdc  01-code-discipline.mdc  02-communication.mdc  03-multi-agent-protocol.mdc  04-workspace-context.mdc  README.mdc
.cursor/rules/agents/: explorer.mdc  planner.mdc  reviewer.mdc  security-reviewer.mdc
.cursor/rules/skills/: memory.mdc  plan.mdc  review.mdc  security-review.mdc  simplify.mdc
cmake/modules/: CompilerWarnings.cmake  Coverage.cmake  Sanitizers.cmake  StandardVersion.cmake  StaticAnalyzers.cmake
docs/: Mohamed_Zaki_Final.docx  roadmap.md
docs/cheatsheets/: cpp_project_beginner.md  double_buffer_ipc_explainer.html  rvo_move_semantics_explainer.html
docs/superpowers/: handoff-2026-05-06.md
docs/superpowers/plans/: 2026-05-05-00-workspace-bootstrap.md  2026-05-05-01-toolchain.md  2026-05-05-02-foundation.md  2026-05-06-03-ros2.md  2026-05-06-cpp-bible-00-bootstrap.md  2026-05-06-cpp-bible-01-language.md  2026-05-06-cpp-bible-02-toolchain.md  2026-05-06-cpp-bible-03-systems-programming.md  2026-05-06-cpp-bible-04a-cuda-embedded.md  2026-05-06-cpp-bible-04b-robotics-ros2-ai.md  2026-05-06-cpp-bible-05a-visual.md  2026-05-06-cpp-bible-05b-crosscutting.md  2026-05-06-learn-cpp-hardcore-implementation.md
docs/superpowers/specs/: 2026-05-04-cpp-senior-roadmap-design.md  2026-05-06-cpp-bible-tutorial-design.md  2026-05-06-learn-cpp-hardcore-design.md  2026-05-06-ros2-design.md
examples/01-toolchain/: CMakePresets.json
examples/01-toolchain/docs/: cmake-setup.md  cross-compilation.md  sanitizers.md
examples/01-toolchain/scripts/: pgo_workflow.sh  run-tsan.sh
examples/01-toolchain/src/: asan_demo.cpp  linting_demo.cpp  pgo_workload.cpp
examples/01-toolchain/tests/: test_basic.cpp
examples/01-toolchain/toolchain/: arm-linux-gnueabihf.cmake
examples/02-foundation/: CMakeLists.txt
examples/02-foundation/demos/: patterns_demo.cpp  standards_demo.cpp
examples/02-foundation/docs/: concurrency.md  oop.md  patterns.md  templates.md  types.md
examples/02-foundation/include/foundation/concurrency/: thread_pool.hpp
examples/02-foundation/include/foundation/memory/: allocators.hpp
examples/02-foundation/include/foundation/oop/: rules.hpp
examples/02-foundation/include/foundation/patterns/: factory.hpp  observer.hpp
examples/02-foundation/include/foundation/templates/: concepts.hpp  policy.hpp  type_traits.hpp  variadic.hpp
examples/02-foundation/include/foundation/types/: expected.hpp
examples/02-foundation/tests/: test_memory.cpp
examples/03-ros2/docker/: entrypoint.sh
examples/03-ros2/docs/: custom-interfaces.md  docker-setup.md  executors-qos.md
examples/03-ros2/ros2_ws/src/mobile_robot/: CMakeLists.txt  package.xml
examples/03-ros2/ros2_ws/src/mobile_robot/include/mobile_robot/: odometry_node.hpp  path_planner_server.hpp
examples/03-ros2/ros2_ws/src/mobile_robot/launch/: full_demo.launch.py  mobile_robot.launch.py
examples/03-ros2/ros2_ws/src/mobile_robot/src/: map_publisher_main.cpp  odometry_node.cpp  path_planner_server.cpp
examples/03-ros2/ros2_ws/src/sensor_fusion/: CMakeLists.txt  package.xml
examples/03-ros2/ros2_ws/src/sensor_fusion/include/sensor_fusion/: diagnostics_aggregator.hpp  imu_simulator.hpp  lidar_simulator.hpp  state_estimator.hpp  state_estimator_logic.hpp
examples/03-ros2/ros2_ws/src/sensor_fusion/src/: diagnostics_aggregator_main.cpp  lidar_simulator.cpp
examples/03-ros2/ros2_ws/src/sensor_fusion/test/: test_state_estimator.cpp
projects/01-toolchain/: .clang-tidy  CMakeLists.txt  README.md
projects/01-toolchain/docs/: optimization.md  static-analysis.md
projects/01-toolchain/scripts/: run-asan.sh
projects/01-toolchain/src/: intrinsics_demo.cpp  tsan_demo.cpp  ubsan_demo.cpp
projects/01-toolchain/toolchain/: arm-none-eabi.cmake
projects/02-foundation/: CMakePresets.json  README.md
projects/03-ros2/: .dockerignore  README.md  docker-compose.yml
projects/03-ros2/ros2_ws/src/arm_controller/: CMakeLists.txt  package.xml
projects/03-ros2/ros2_ws/src/arm_controller/include/arm_controller/: gripper_service.hpp  joint_state_publisher.hpp  pid_controller.hpp  trajectory_server.hpp
projects/03-ros2/ros2_ws/src/arm_controller/src/: arm_component_manager.cpp  joint_state_publisher.cpp  pid_logic.cpp  trajectory_server.cpp
projects/03-ros2/ros2_ws/src/arm_controller/test/: test_pid_controller.cpp
projects/03-ros2/ros2_ws/src/custom_interfaces/: CMakeLists.txt
projects/03-ros2/ros2_ws/src/custom_interfaces/action/: MoveArm.action  NavigateTo.action
projects/03-ros2/ros2_ws/src/custom_interfaces/msg/: JointTrajectoryCustom.msg
projects/03-ros2/ros2_ws/src/custom_interfaces/srv/: GripperCommand.srv  SetVelocity.srv
projects/03-ros2/ros2_ws/src/mobile_robot/: CMakeLists.txt
projects/03-ros2/ros2_ws/src/mobile_robot/include/mobile_robot/: a_star.hpp  map_publisher.hpp  odometry_node.hpp  velocity_controller.hpp
projects/03-ros2/ros2_ws/src/mobile_robot/rviz/: full_demo.rviz
projects/03-ros2/ros2_ws/src/mobile_robot/src/: a_star.cpp  map_publisher.cpp  map_publisher_main.cpp  odometry_node.cpp  odometry_node_main.cpp  path_planner_main.cpp  velocity_controller.cpp  velocity_controller_main.cpp
projects/03-ros2/ros2_ws/src/mobile_robot/test/: test_path_planner.cpp
projects/learn-cpp-beginner/: README.md
scripts/: setup.sh
tutorial/: README.md
tutorial/00-orientation/: README.md  core.md  deep-dive.md  interview.md
tutorial/pillar-2-toolchain/08-cmake/examples/modern_cmake_demo/: CMakeLists.txt  CMakePresets.json
tutorial/pillar-2-toolchain/08-cmake/examples/modern_cmake_demo/include/demo/: math.hpp
tutorial/pillar-2-toolchain/08-cmake/examples/modern_cmake_demo/src/: main.cpp
tutorial/pillar-2-toolchain/08-cmake/examples/modern_cmake_demo/tests/: test_math.cpp
(+119 files in other folders)
