cmake_minimum_required(VERSION 3.8)
project(custom_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Odometry2D.msg"
  "msg/ImuReading.msg"
  "msg/PointCloud2D.msg"
  "msg/JointPoint.msg"
  "msg/JointTrajectoryCustom.msg"
  "srv/SetVelocity.srv"
  "srv/GripperCommand.srv"
  "action/NavigateTo.action"
  "action/MoveArm.action"
  DEPENDENCIES std_msgs builtin_interfaces
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
